<resources>
    <string name="app_name">MyWallpapers</string>
    <string name="set_wallpaper">Set wallpaper</string>

    <string name="no_internet_connection">No internet connection</string>
    <string name="texture_request">textured</string>
    <string name="nature_request">nature</string>
    <string name="animal_request">animal</string>
    <string name="car_request">car</string>
    <string name="city_request">city</string>
    <string name="universe_request">universe</string>
    <string name="wallpapers_changed">Wallpapers changed</string>
    <string name="alert_message_install_this_wallpaper">Install this wallpaper?</string>
    <string name="alert_message_ok">OK</string>
    <string name="alert_message_cancel">Cancel</string>

    <string name="settings">Settings</string>
    <string name="settings_title">Wallpapers Settings</string>
    <string name="check_connection_settings">Check connection settings</string>

    <string name="settings_list_size_wallpapers">List size (3/200)</string>
    <string name="settings_list_size_key" translatable="false">page_size_key</string>
    <string name="settings_list_size_default" translatable="false">25</string>


    <string name="settings_orientation">Show images only</string>
    <string name="settings_orientation_key" translatable="false">orientation_key</string>
    <string name="settings_orientation_default" translatable="false">vertical</string>

    <string name="settings_order_by_all_label">All</string>
    <string name="settings_order_by_all_value" translatable="false">all</string>

    <string name="settings_order_by_horizontal_label">Horizontal</string>
    <string name="settings_order_by_horizontal_value" translatable="false">horizontal</string>

    <string name="settings_order_by_vertical_label">Vertical</string>
    <string name="settings_order_by_vertical_value" translatable="false">vertical</string>

    <string name="settings_order_by">Order by</string>
    <string name="settings_order_key" translatable="false">order_key</string>
    <string name="settings_popular_default" translatable="false">popular</string>

    <string name="settings_popular_label">Popular</string>
    <string name="settings_popular_value" translatable="false">popular</string>

    <string name="settings_latest_label">Latest</string>
    <string name="settings_latest_value" translatable="false">latest</string>

    <string name="settings_safe_search">Safe search</string>
    <string name="settings_safe_search_key" translatable="false">safe_search_key</string>
    <string name="settings_safe_search_default" translatable="false">true</string>

    <string name="settings_true_label">True</string>
    <string name="settings_true_value" translatable="false">true</string>

    <string name="settings_false_label">False</string>
    <string name="settings_false_value" translatable="false">false</string>
    <string name="swipe_to_refresh">Swipe to refresh</string>

</resources>
